<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/emptycalss">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/classroom" />

    <Button
        android:id="@+id/Button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/m"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/s"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/w"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/t"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/f"
        android:textSize="15sp" />

</LinearLayout>