<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_second" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />


    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:text="@string/xure"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:text="@string/tianjb"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="270dp"
        android:text="@string/dianzi"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="360dp"
        android:text="@string/shiyan"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="450dp"
        android:text="@string/yinyue"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

</android.support.design.widget.CoordinatorLayout>